--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:41</td>   <td>13515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>20/08/21 10:00:54</td>   <td>26864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExcelParameterizationWithHashTable.x(java.util.Hashtable)[pri:0, instance:Testpackage3.ExcelParameterizationWithHashTable@482f8f11]">x</td> 
-  <td>main@1471868639</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>20/08/26 09:17:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@cc285f4]">doLogin</td> 
+  <td>PoolService-2@1241459863</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>20/08/26 09:17:32</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@cc285f4]">doLogin</td> 
+  <td>PoolService-2@1241459863</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>20/08/26 09:17:32</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@cc285f4]">doLogin</td> 
+  <td>PoolService-2@1241459863</td>   <td></td> </tr>
+<tr bgcolor="76ae94">  <td>20/08/26 09:17:32</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@cc285f4]">doLogin</td> 
+  <td>PoolService-2@1241459863</td>   <td></td> </tr>
 </table>
