--- a/test-output/old/Parallel Suite/classes.html
+++ b/test-output/old/Parallel Suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>parallelTest.TestParallelDP</td>
+<td>parallelTest.TestBrowser</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
