--- a/test-output/old/Suite-1/classes.html
+++ b/test-output/old/Suite-1/classes.html
@@ -4,60 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Testpackage2.TestCase1</td>
+<td>parallelTest.TestInvocation</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>p</td>
-<td>smokeTest </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>a</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>q</td>
-<td>RegresstionTesting </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>r</td>
-<td>smokeTest RegresstionTesting </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>x</td>
+<td>executeTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeclass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>openBrowser</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>tearDown</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>Afterclass</td>
-<td>&nbsp;</td></tr>
 </table>
